# covid-climate-signatures

./: CITATION.bib  README.md  pyproject.toml  requirements.txt
code/notebooks/: 2. worldwide_country_group_sdcs.ipynb  3. europe_regions.ipynb  4. process_based_model.ipynb  process_based_model.ipynb  worldwide_country_group_sdcs.ipynb
code/src/: __init__.py  fits.py  process_based_model.py  utils.py
data/: coords_region.csv  coords_region_EU_regions.csv  country_groups.csv  covid_eu.csv
data/covid19/: covid_world.csv
data/density_grid/: processed_05_grid.csv
data/process_based_model/pre_optimized_results/: Barcelona_1_constant.csv  Barcelona_1_seasonal.csv  Barcelona_1_temperature.csv  Barcelona_2_constant.csv  Barcelona_2_seasonal.csv  Barcelona_2_temperature.csv  Barcelona_3_constant.csv  Barcelona_3_seasonal.csv  Barcelona_3_temperature.csv  Catalunya_1_constant.csv  Catalunya_1_seasonal.csv  Catalunya_2_constant.csv  Catalunya_2_seasonal.csv  Catalunya_3_seasonal.csv  Lombardia_1_seasonal.csv  Lombardia_1_temperature.csv  Lombardia_2_seasonal.csv  Lombardia_2_temperature.csv  Thuringen_1_seasonal.csv  Thuringen_2_constant.csv  Thuringen_2_seasonal.csv  Thuringen_2_temperature.csv
data/process_based_model/training_data/: BarcelonaData.csv  CatalunyaData.csv  LombardiaData.csv  ThuringenData.csv
data/shapes/: world_shape.pickle
results/tables/: initial_wave_full_table.csv  lm_ah_r0.txt  lm_t_r0.txt  params_sensitivity.csv  ranges_eu_regions.csv
results/tables/SDC_country_groups/: sdc_75_Baltics_absolute_humidity.xlsx  sdc_75_Baltics_temperature.xlsx  (+18 more)
(+38 files in other folders)
